Objects/Garment__c/Garment__c.object-meta.xml
<CustomObject>
    <label>Garment</label>
    <nameField>
        <label>Garment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Garments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>