Objects/Garment__c/fields/Brought_in_date__c.field-meta.xml
<CustomField>
    <fullName>Brought_in_date__c</fullName>
    <label>Brought in date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>