Objects/Garment__c/fields/Garment_Type__c.field-meta.xml
<CustomField>
    <fullName>Garment_Type__c</fullName>
    <label>Garment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outerwear</fullName>
            </value>
            <value>
                <fullName>Underwear</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>