Objects/Garment__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orders</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Garment</relationshipLabel>
    <relationshipName>Garments</relationshipName>
    <type>Lookup</type>
</CustomField>